--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,61 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.info {
+  padding-top: 130px;
+  padding-bottom: 200px;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  border-bottom: 1px solid $separator-color;
+
+  .logo{
+
+    img{
+      max-height: 80px;
+      min-height: 20px;
+    }
+  }
+
+  h2 {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: normal;
+    line-height: 1.4em;
+    padding-bottom: 20px;
+    text-align: center;
+    text-shadow: none;
+  }
+
+
+  .login {
+    font-weight: 400;
+    display: block;
+    font-size: 12px;
+    color:$main-color;
+    text-transform: none;
+    letter-spacing: 1px;
+    margin: auto;
+    margin-top: 15px;
+  }
+}
+
+.work-in-instacart {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  border-bottom: 1px solid $separator-color;
+
+  .stylized-fa {
+    padding: 25px;
+    font-size: 90px;
+    color: $main-color;
+  }
+}
+
+.action {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  border-bottom: 1px solid #E6E6E6;
+}
