--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -14,5 +14,12 @@
 
       %ul.nav.navbar-nav.navbar-right
         %li
-          = link_to 'Applicants Status', root_path
+          = link_to('Application Status', login_path, class: 'login')
+      - if signed_in?
+        %li.dropdown
+          %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
+            = current_applicant.first_name
+          %ul.dropdown-menu
+            %li
+              = link_to("Logout", logout_path, method: :post)
     
