Implemented applicant multi step form and styles, BREAK TO EAT

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -6,3 +6,4 @@ $separator-color:#919191;
 $call-to-action-button-color: #13d883;
 $call-to-action-button-border-color: #107f4f;
 $white: #ffffff;
+$red: #ff0000;
