--- a/app/views/applicants/_form.html.haml
+++ b/app/views/applicants/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(applicant, :html=>{ role: 'form'}) do |f|
+= form_for(applicant, :html=>{class:'form-horizontal', role: 'form'}) do |f|
   .form-group
     .col-md-2.col-md-offset-4
       = f.text_field :first_name, class: "form-control", placeholder: "First Name", required: 'required'
