RETAKE CODING, some fixes and improvements in applicant form

--- a/app/assets/stylesheets/applicants.scss
+++ b/app/assets/stylesheets/applicants.scss
@@ -2,7 +2,7 @@
   text-align: center;
   padding-top: 55px;
   p {
-    text-align: left;
+    text-align: center;
   }
 
   h1 {
@@ -20,11 +20,15 @@
 }
 
 .applicant-form-confirmation {
+  padding-top: 55px;
+  
   p {
     font-size: 20px;
   }
 
   ul{
+    list-style-type: none;
+
     li{
       font-size: 17px;
     }
