--- a/app/views/applicants/apply.html.haml
+++ b/app/views/applicants/apply.html.haml
@@ -1,5 +1,5 @@
 - case current_applicant.state
   - when 'background_check'
     = render 'applicants/steps/background_check'
-  - when 'complete'
+  - when 'confirmation'
     = render 'applicants/steps/confirmation'
