--- a/app/views/applicants/steps/_confirmation.html.haml
+++ b/app/views/applicants/steps/_confirmation.html.haml
@@ -1,9 +1,9 @@
 .applicant-form-confirmation
-  .col-md-6.col-md-offset-2
+  .col-md-6.col-md-offset-4
     %h1
       Application finished
     %p
-      You have successfully submitted you application for Shopper position in Instacart.
+      You have successfully submitted your application for Instacart Shopper position.
 
     - %w(first_name last_name phone email phone_type region).each do |attribute|
       %ul
