--- a/app/views/applicants/edit.html.haml
+++ b/app/views/applicants/edit.html.haml
@@ -2,10 +2,10 @@
   %h1
     Edit your shopper application
 
-  - if @applicant.errors.present?
+  - if current_applicant.errors.present?
     .col-md-4.col-md-offset-4
-      - @applicant.errors.full_messages.each do |msg|
+      - current_applicant.errors.full_messages.each do |msg|
         %p.error
           = msg
 
-  = render partial: "form", locals: { applicant: @applicant }
+  = render partial: "form", locals: { applicant: current_applicant }
