--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,19 +8,18 @@
         %span.icon-bar
         %span.icon-bar
       = link_to image_tag(asset_path("logo.png"), class: 'navbar-brand'), root_path
-    .collapse.navbar-collapse
+    .collapse.navbar-collapse.col-md-8
       %ul.nav.navbar-nav
         = render 'layouts/navigation_links'
 
-      %ul.nav.navbar-nav.navbar-right
-        %li
-          = link_to('Application Status', login_path, class: 'login')
-          
-      - if signed_in?
-        %li.dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
-            = current_applicant.first_name
-          %ul.dropdown-menu
-            %li
-              = link_to("Logout", logout_path, method: :post)
+    - if signed_in?
+      .collapse.navbar-collapse.navbar-ex1-collapse
+        %ul.nav.navbar-nav.navbar-right
+          %li.dropdown
+            %a.dropdown-toggle{"data-toggle" => "dropdown", href: "#"}
+              = current_applicant.first_name
+              %b.caret
+            %ul.dropdown-menu
+              %li
+                = link_to("Logout", logout_path, method: :post)
     
