RETAKE implementation after work day, Some improvements and fixes, applicant workflow status changing using new font

--- a/app/views/applicants/steps/_background_check.html.haml
+++ b/app/views/applicants/steps/_background_check.html.haml
@@ -18,7 +18,7 @@
             on me. I also understand that nothing herein shall be construed as an offer of employment or contract for services.
 
           %p
-            I agree with all the above terms
+            I agree with all the above terms.
 
       .form-group
         .col-md-offset-4.col-md-4
