--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -18,14 +18,14 @@
       .row
         .col-md-6
           %i.fa.fa-shopping-cart.stylized-fa
-          %h4
+          %h3
             Work as a Shopper
           Instacart allows you to work and have fun at the same time doing what you love. You can work either full-time
           or part time at your own convenience
 
         .col-md-6
           %i.fa.fa-car.stylized-fa
-          %h4
+          %h3
             Work as a Shopper and Driver
           Deliver groceries from local stores to customers. Shop for groceries and deliver them to customers. 
           You can enjoy and have fun at work
@@ -33,8 +33,9 @@
   .action
     .section-content
       .section-title.bottom-spacing
-        Apply, it is quick!! 
-        You can be an Instacart shopper!!
+        Apply Now, it is quick and easy!! 
+        %br
+        You can be an Instacart shopper in a few minutes!!
       .top-margin
         = link_to('Apply Now', new_applicant_path, class: 'call-to-action')
 
