--- a/app/assets/stylesheets/_general.scss
+++ b/app/assets/stylesheets/_general.scss
@@ -1,4 +1,9 @@
 
+body {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+}
+
 .section-content {
   margin: 0 auto;
   text-align: center;
@@ -29,7 +34,7 @@
   line-height: 16px;
   padding: 15px 70px 15px 70px;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 
