--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
 
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
     %meta{:name => 'description', content: 'Shopper Challenge'}
+    %link{:href=>'https://fonts.googleapis.com/css?family=Raleway:500,200', :rel=>'stylesheet', :type=>'text/css'}
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
