--- a/app/views/applicants/steps/_confirmation.html.haml
+++ b/app/views/applicants/steps/_confirmation.html.haml
@@ -8,7 +8,7 @@
     - %w(first_name last_name phone email phone_type region).each do |attribute|
       %ul
         %li
-          %b
+          %strong
             = attribute.titleize
           = current_applicant.send(attribute)
 
